Update deque for finding maximum contiguious data approach